feat: 멀티미디어 바코드 조회 API 서버 명세 및 구현 계획 작성
- 기능 명세서 (spec.md): ISBN, 블루레이, DVD, 음악 앨범 지원
- 구현 계획 (plan.md): .NET 10, ASP.NET Core 10, EF Core 10, PostgreSQL
- 데이터베이스 설계 (data-model.md): TPT 전략, 외부 소스 메타데이터
- API 계약 (openapi.yaml): OpenAPI 3.0 명세
- 기술 연구 (research.md): 기술 스택 검증 및 선정 근거
- 개발 가이드 (quickstart.md): 개발 환경 설정 가이드
- 작업 목록 (tasks.md): 151개 구현 작업 (9개 Phase)
- 품질 체크리스트 (requirements.md): 명세 품질 검증

주요 기능:
- 통합 엔드포인트: GET /items/{barcode}
- 데이터베이스 우선 검색 (Garnet Cache → PostgreSQL → External APIs)
- 외부 API 우선순위: 책(Google→Kakao→Aladin), 영상(TMDb→OMDb), 음악(MusicBrainz→Discogs)
- 하이브리드 데이터 갱신: 수동적(검색 시) + 능동적(저트래픽 시간대)
- 읽기 전용 API (CRUD 없음)
- 자동 바코드 타입 감지 (ISBN-10/13, UPC, EAN-13)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "chat.tools.terminal.autoApprove": {
         ".specify/scripts/bash/": true,
         ".specify/scripts/powershell/": true
-    }
+    },
+    "idf.pythonInstallPath": "/opt/homebrew/opt/python@3.9/Frameworks/Python.framework/Versions/3.9/bin/python3"
 }
 
