--- a/src/CollectionServer.Api/appsettings.json
+++ b/src/CollectionServer.Api/appsettings.json
@@ -8,7 +8,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=collectionserver;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=collectionserver;Username=postgres;Password=postgres;Maximum Pool Size=100;Connection Idle Lifetime=300;Connection Pruning Interval=10"
+  },
+  "RateLimiting": {
+    "PermitLimit": 100,
+    "WindowSeconds": 60,
+    "QueueLimit": 10
   },
   "ExternalApis": {
     "GoogleBooks": {
