--- a/tests/CollectionServer.UnitTests/CollectionServer.UnitTests.csproj
+++ b/tests/CollectionServer.UnitTests/CollectionServer.UnitTests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
@@ -22,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\CollectionServer.Api\CollectionServer.Api.csproj" />
     <ProjectReference Include="..\..\src\CollectionServer.Core\CollectionServer.Core.csproj" />
     <ProjectReference Include="..\..\src\CollectionServer.Infrastructure\CollectionServer.Infrastructure.csproj" />
   </ItemGroup>
