--- a/src/CollectionServer.Infrastructure/CollectionServer.Infrastructure.csproj
+++ b/src/CollectionServer.Infrastructure/CollectionServer.Infrastructure.csproj
@@ -11,7 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-preview.1" />
   </ItemGroup>
 
   <PropertyGroup>
