--- a/src/CollectionServer.Infrastructure/CollectionServer.Infrastructure.csproj
+++ b/src/CollectionServer.Infrastructure/CollectionServer.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-rc.2" />
+    <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
   </ItemGroup>
 
   <PropertyGroup>
