chore: add initial migration and tls-ready nginx config

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,27 @@
+# HTTP → HTTPS 리다이렉트 + ACME 챌린지 처리
 server {
     listen 80;
-    server_name localhost; # Change to your domain
+    server_name example.com www.example.com; # TODO: 실제 도메인으로 변경
+
+    # Certbot이 TLS 인증서를 발급할 때 사용하는 경로
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# TLS Termination + Reverse Proxy
+server {
+    listen 443 ssl http2;
+    server_name example.com www.example.com; # TODO: 실제 도메인으로 변경
+
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem; # TODO: 도메인 반영
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem; # TODO: 도메인 반영
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
         proxy_pass http://api:8080;
