--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -45,6 +45,21 @@ services:
       - collectionserver-network
     restart: unless-stopped
 
+  # Certbot (manual/renew profile)
+  certbot:
+    image: certbot/certbot:latest
+    container_name: collectionserver-certbot
+    profiles:
+      - certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: /bin/sh
+    command: -c "trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --quiet || true; sleep 12h & wait $!; done"
+    networks:
+      - collectionserver-network
+    restart: unless-stopped
+
   # API Server
   api:
     image: ghcr.io/${GITHUB_REPOSITORY}:latest
