--- a/src/CollectionServer.Api/appsettings.Production.json
+++ b/src/CollectionServer.Api/appsettings.Production.json
@@ -58,5 +58,10 @@
       "Priority": 2,
       "TimeoutSeconds": 10
     }
+  },
+  "Monitoring": {
+    "OtlpExporter": {
+      "Endpoint": "http://monitoring-tempo:4317"
+    }
   }
 }
