--- a/src/CollectionServer.Api/appsettings.json
+++ b/src/CollectionServer.Api/appsettings.json
@@ -59,5 +59,10 @@
       "Priority": 2,
       "TimeoutSeconds": 10
     }
+  },
+  "Monitoring": {
+    "OtlpExporter": {
+      "Endpoint": ""
+    }
   }
 }
