feat: expose metrics for cache, providers, and rate limiting

--- a/ops/monitoring/alerts.yml
+++ b/ops/monitoring/alerts.yml
@@ -10,10 +10,10 @@ groups:
           summary: "CollectionServer API Down"
           description: "No scrape targets responded for job=collectionserver-api in the last minute."
       - alert: HighRateLimitErrors
-        expr: rate(http_requests_total{status_code="429"}[5m]) > 5
+        expr: rate(collectionserver_rate_limit_rejections_total[5m]) > 5
         for: 5m
         labels:
           severity: warning
         annotations:
           summary: "Excessive 429 responses"
-          description: "Over 5 HTTP 429 responses per second in the last 5 minutes."
+          description: "More than 5 rate-limit rejections per second in the last 5 minutes."
