docs: configure alertmanager for telegram

--- a/ops/monitoring/alertmanager.yml
+++ b/ops/monitoring/alertmanager.yml
@@ -2,15 +2,38 @@ global:
   resolve_timeout: 5m
 
 route:
-  receiver: 'default'
-  repeat_interval: 1h
+  receiver: telegram
+  repeat_interval: 30m
+  routes:
+    # 향후 Slack 유료 플랜을 도입하면 아래 매처를 활성화하고 slack-notifications 리시버를 기본으로 전환하세요.
+    - receiver: slack
+      continue: true
+      matchers:
+        - severity="critical"
 
 receivers:
-  - name: 'default'
-    email_configs:
-      - to: ops@example.com
-        from: noreply@example.com
-        smarthost: smtp.example.com:587
-        auth_username: ops@example.com
-        auth_identity: ops@example.com
-        auth_password: CHANGE_ME
+  - name: telegram
+    telegram_configs:
+      - bot_token: "<TELEGRAM_BOT_TOKEN>"
+        chat_id: "<TELEGRAM_CHAT_ID>"
+        parse_mode: Markdown
+        message: |
+          [CollectionServer] {{ .CommonAnnotations.summary }}
+
+          {{ range .Alerts -}}
+          *Description*: {{ .Annotations.description }}
+          *Severity*: {{ .Labels.severity }}
+          *Starts At*: {{ .StartsAt }}
+          {{ end }}
+  - name: slack
+    slack_configs:
+      - api_url: "https://hooks.slack.com/services/REPLACE/ME"
+        channel: "#collectionserver-alerts"
+        send_resolved: true
+        title: "[CollectionServer] {{ .CommonAnnotations.summary }}"
+        text: |
+          {{ range .Alerts -}}
+          *Description*: {{ .Annotations.description }}
+          *Severity*: {{ .Labels.severity }}
+          *Starts At*: {{ .StartsAt }}
+          {{ end }}
